--- a/source/index.html
+++ b/source/index.html
@@ -92,20 +92,20 @@
           </div>
           <div class="hero__download">
             <p class="hero__title">Взгляните на жизнь иначе!</p>
-            <a class="round-button hero__download-button" href="#">Скачать приложение</a>
+            <a class="round-button hero__download-button" href="https://www.apple.com/lae/itunes/">Скачать приложение</a>
             <ul class="hero__device device">
               <li class="device__item">
-                <a href="#" class="device__link device__link--ios">
+                <a href="https://www.apple.com/lae/ios/app-store/" class="device__link device__link--ios">
                   <span class="visually-hidden">приложение для iOS</span>
                 </a>
               </li>
               <li class="device__item">
-                <a href="#" class="device__link device__link--android">
+                <a href="https://play.google.com/store" class="device__link device__link--android">
                   <span class="visually-hidden">приложение для Android</span>
                 </a>
               </li>
               <li class="device__item">
-                <a href="#" class="device__link device__link--windows">
+                <a href="https://www.microsoft.com/ru-ru/store/appsvnext/windows" class="device__link device__link--windows">
                   <span class="visually-hidden">приложение для Windows</span>
                 </a>
               </li>
