--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
                 </g>
               </svg>
             </a>
-            <button class="main-nav__menu">
+            <button class="main-nav__menu" type="button">
               <span class="visually-hidden">Меню</span>
             </button>
           </div>
@@ -110,7 +110,7 @@
                 </a>
               </li>
             </ul>
-            <p class="device__download-description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+            <p class="hero__download-description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
                   </picture>
                 </div>
                 <h3 class="features__title">Меняет мир вокруг</h3>
-                <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br> усилить эффект</p>
+                <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
               </li>
               <li class="features__item">
                 <div class="features__pic features__pic--mobile">
@@ -174,7 +174,7 @@
           </div>
           <div class="effect__description">
             <h2 class="effect__title">Эффект<br> на 24 часа!</h2>
-            <p class="effect__text">Британские ученые провели исследования и доказали,<br> что положительный эффект<br> от использования приложения длится целые сутки!</p>
+            <p class="effect__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
             <a class="effect__more" href="#">Узнать больше об исследовании</a>
           </div>
         </div>
@@ -210,9 +210,9 @@
             </li>
           </ul>
           <p class="review__toggles slider__toggles">
-            <button class="slider__toggle slider__toggle--active" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
+            <button class="slider__toggle slider__toggle--active" type="button"><span class="visually-hidden">1</span></button>
+            <button class="slider__toggle" type="button"><span class="visually-hidden">2</span></button>
+            <button class="slider__toggle" type="button"><span class="visually-hidden">3</span></button>
           </p>
         </div>
       </section>
