--- a/source/photo.html
+++ b/source/photo.html
@@ -56,7 +56,7 @@
                 </g>
               </svg>
             </a>
-            <button class="main-nav__menu">
+            <button class="main-nav__menu" type="button">
               <span class="visually-hidden">Меню</span>
             </button>
           </div>
