--- a/source/form.html
+++ b/source/form.html
@@ -53,7 +53,7 @@
                 </g>
               </svg>
             </a>
-            <button class="main-nav__menu">
+            <button class="main-nav__menu" type="button">
               <span class="visually-hidden">Меню</span>
             </button>
           </div>
@@ -129,18 +129,18 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form-competition__set form-competition__set--light form-competition__set--adress">
-          <legend class="form-competition__title form-competition__title--adress">Контактная информация</legend>
+        <fieldset class="form-competition__set form-competition__set--light form-competition__set--address">
+          <legend class="form-competition__title form-competition__title--address">Контактная информация</legend>
           <div class="container container--form">
-            <ul class="form-competition__list form-competition__list--adress">
-              <li class="form-competition__item form-competition__item--adress">
-                <label class="form-competition__text-label form-competition__text-label--adress" for="phone">Номер телефона</label>
+            <ul class="form-competition__list form-competition__list--address">
+              <li class="form-competition__item form-competition__item--address">
+                <label class="form-competition__text-label form-competition__text-label--address" for="phone">Номер телефона</label>
                 <p class="form-competition__text-input form-competition__text-input--contacts form-competition__text-input--phone">
                   <input class="form-competition__text form-competition__text--contacts" type="tel" id="phone" placeholder="Номер, пожалуйста">
                 </p>
               </li>
-              <li class="form-competition__item form-competition__item--adress">
-                <label class="form-competition__text-label form-competition__text-label--adress" for="address">Адрес почты</label>
+              <li class="form-competition__item form-competition__item--address">
+                <label class="form-competition__text-label form-competition__text-label--address" for="address">Адрес почты</label>
                 <p class="form-competition__text-input form-competition__text-input--contacts form-competition__text-input--mail">
                   <input class="form-competition__text form-competition__text--contacts form-competition__text--mail" type="email" id="address" placeholder="Введите почту *" required>
                 </p>
@@ -183,7 +183,7 @@
       <div class="pop-up">
         <div class="pop-up__text">
           <h2 class="pop-up__title">Что-то пошло не так!</h2>
-          <p class="pop-up__desctiption">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить.</p>
+          <p class="pop-up__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить.</p>
         </div>
         <div class="pop-up__button-place">
           <button class="btn-form" type="button">OK</button>
@@ -192,7 +192,7 @@
       <div class="pop-up pop-up--success">
         <div class="pop-up__text">
           <h2 class="pop-up__title">Ваша заявка отправлена</h2>
-          <p class="pop-up__desctiption">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и<br> оповестим вас.</p>
+          <p class="pop-up__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
         </div>
         <div class="pop-up__button-place pop-up__button-place--success">
           <button class="btn-form" type="button">Закрыть окно</button>
