--- a/source/photo.html
+++ b/source/photo.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/opensans.woff" as="font">
   <script>
     document.createElement("picture");
   </script>
@@ -19,7 +20,7 @@
   </div>
   <div class="wrap">
     <header class="page-header">
-      <nav class="main-nav main-nav--opened page-header__menu">
+      <nav class="main-nav main-nav--opened main-nav--nojs page-header__menu">
         <div class="main-nav__wrapper">
           <div class="main-nav__top">
             <a class="main-nav__logo" href="index.html">
@@ -90,10 +91,10 @@
           <div class="users-posts__photo users-posts__photo--pano">
             <a href="#">
               <picture>
-                <source type="image/webp" media="(min-width:1200px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width:960px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width:660px)" srcset="img/panorama-tablet@1x.webp 1x, img/panorama-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/panorama-mobile@1x.webp 1x, img/panorama-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+                <source media="(min-width:960px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
                 <source media="(min-width:660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
                 <img class="users-posts__image" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" width="320" height="137" alt="Панорама гор с площадки для роупджампинга">
               </picture>
@@ -106,7 +107,12 @@
                 <p class="users-posts__time">(5 минут назад)</p>
               </div>
               <p class="users-posts__description users-posts__description--pano">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-              <p class="users-posts__like users-posts__like--pano">Нравится: 215</p>
+              <div class="users-posts__like users-posts__like--pano">
+                <button class="users-posts__heart">
+                  <svg class="users-posts__heart-image" width="48" height="48"><use xlink:href="#icon-heart"></use></svg>
+                </button>
+                <p class="users-posts__count">Нравится: 215</p>
+              </div>
             </div>
           </div>
         </li>
@@ -114,10 +120,10 @@
           <div class="users-posts__photo">
             <a href="#">
               <picture>
-                <source type="image/webp" media="(min-width:1200px)" srcset="img/photo-car-desktop@1x.webp 1x, img/photo-car-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width:960px)" srcset="img/photo-car-desktop@1x.webp 1x, img/photo-car-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width:660px)" srcset="img/photo-car-tablet@1x.webp 1x, img/photo-car-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/photo-car-mobile@1x.webp 1x, img/photo-car-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
+                <source media="(min-width:960px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
                 <source media="(min-width:660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x">
                 <img class="users-posts__image" src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" width="280" height="180" alt="Белый легковой автомобиль">
               </picture>
@@ -130,7 +136,12 @@
                 <p class="users-posts__time">(5 часов назад)</p>
               </div>
               <p class="users-posts__description">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-              <p class="users-posts__like">Нравится: 356</p>
+              <div class="users-posts__like">
+                <button class="users-posts__heart">
+                  <svg class="users-posts__heart-image" width="48" height="48"><use xlink:href="#icon-heart"></use></svg>
+                </button>
+                <p class="users-posts__count">Нравится: 356</p>
+              </div>
             </div>
           </div>
         </li>
@@ -138,10 +149,10 @@
           <div class="users-posts__photo">
             <a href="#">
               <picture>
-                <source type="image/webp" media="(min-width:1200px)" srcset="img/photo-drumset-desktop@1x.webp 1x, img/photo-drumset-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width:960px)" srcset="img/photo-drumset-desktop@1x.webp 1x, img/photo-drumset-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width:660px)" srcset="img/photo-drumset-tablet@1x.webp 1x, img/photo-drumset-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/photo-drumset-mobile@1x.webp 1x, img/photo-drumset-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
+                <source media="(min-width:960px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
                 <source media="(min-width:660px)" srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x">
                 <img class="users-posts__image" src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" width="280" height="180" alt="Барабанная установка">
               </picture>
@@ -154,7 +165,12 @@
                 <p class="users-posts__time">(12 часов назад)</p>
               </div>
               <p class="users-posts__description">Соседи будут рады!</p>
-              <p class="users-posts__like">Нравится: 666</p>
+              <div class="users-posts__like">
+                <button class="users-posts__heart">
+                  <svg class="users-posts__heart-image" width="48" height="48"><use xlink:href="#icon-heart"></use></svg>
+                </button>
+                <p class="users-posts__count">Нравится: 666</p>
+              </div>
             </div>
           </div>
         </li>
@@ -162,10 +178,10 @@
           <div class="users-posts__photo">
             <a href="#">
               <picture>
-                <source type="image/webp" media="(min-width:1200px)" srcset="img/photo-window-desktop@1x.webp 1x, img/photo-window-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width:960px)" srcset="img/photo-window-desktop@1x.webp 1x, img/photo-window-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width:660px)" srcset="img/photo-window-tablet@1x.webp 1x, img/photo-window-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/photo-window-mobile@1x.webp 1x, img/photo-window-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
+                <source media="(min-width:960px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
                 <source media="(min-width:660px)" srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x">
                 <img class="users-posts__image" src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" width="280" height="180" alt="Окно офисного здания, выходящее на облачное небо">
               </picture>
@@ -178,7 +194,12 @@
                 <p class="users-posts__time">(20 часов назад)</p>
               </div>
               <p class="users-posts__description">Здесь могла быть ваша цитата о высоком и вечном.</p>
-              <p class="users-posts__like">Нравится: 215</p>
+              <div class="users-posts__like">
+                <button class="users-posts__heart">
+                  <svg class="users-posts__heart-image" width="48" height="48"><use xlink:href="#icon-heart"></use></svg>
+                </button>
+                <p class="users-posts__count">Нравится: 215</p>
+              </div>
             </div>
           </div>
         </li>
@@ -186,10 +207,10 @@
           <div class="users-posts__photo">
             <a href="#">
               <picture>
-                <source type="image/webp" media="(min-width:1200px)" srcset="img/photo-fair-desktop@1x.webp 1x, img/photo-fair-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width:960px)" srcset="img/photo-fair-desktop@1x.webp 1x, img/photo-fair-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width:660px)" srcset="img/photo-fair-tablet@1x.webp 1x, img/photo-fair-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/photo-fair-mobile@1x.webp 1x, img/photo-fair-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
+                <source media="(min-width:960px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
                 <source media="(min-width:660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x">
                 <img class="users-posts__image" src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x" width="280" height="180" alt="Кубанская бахча">
               </picture>
@@ -202,7 +223,12 @@
                 <p class="users-posts__time">(25 часов назад)</p>
               </div>
               <p class="users-posts__description">Самая кубанская в мире!</p>
-              <p class="users-posts__like">Нравится: 4</p>
+              <div class="users-posts__like">
+                <button class="users-posts__heart">
+                  <svg class="users-posts__heart-image" width="48" height="48"><use xlink:href="#icon-heart"></use></svg>
+                </button>
+                <p class="users-posts__count">Нравится: 4</p>
+              </div>
             </div>
           </div>
         </li>
@@ -210,10 +236,10 @@
           <div class="users-posts__photo">
             <a href="#">
               <picture>
-                <source type="image/webp" media="(min-width:1200px)" srcset="img/photo-pov-desktop@1x.webp 1x, img/photo-pov-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width:960px)" srcset="img/photo-pov-desktop@1x.webp 1x, img/photo-pov-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width:660px)" srcset="img/photo-pov-tablet@1x.webp 1x, img/photo-pov-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/photo-pov-mobile@1x.webp 1x, img/photo-pov-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
+                <source media="(min-width:960px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
                 <source media="(min-width:660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x">
                 <img class="users-posts__image" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" width="280" height="180" alt="Вид от первого лица на ночи человека, сидящего на обрыве">
               </picture>
@@ -226,7 +252,12 @@
                 <p class="users-posts__time">(40 часов назад)</p>
               </div>
               <p class="users-posts__description">Где снег-то?</p>
-              <p class="users-posts__like">Нравится: 150</p>
+              <div class="users-posts__like">
+                <button class="users-posts__heart">
+                  <svg class="users-posts__heart-image" width="48" height="48"><use xlink:href="#icon-heart"></use></svg>
+                </button>
+                <p class="users-posts__count">Нравится: 150</p>
+              </div>
             </div>
           </div>
         </li>
@@ -234,10 +265,10 @@
           <div class="users-posts__photo">
             <a href="#">
               <picture>
-                <source type="image/webp" media="(min-width:1200px)" srcset="img/photo-wing-desktop@1x.webp 1x, img/photo-wing-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width:960px)" srcset="img/photo-wing-desktop@1x.webp 1x, img/photo-wing-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width:660px)" srcset="img/photo-wing-tablet@1x.webp 1x, img/photo-wing-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/photo-wing-mobile@1x.webp 1x, img/photo-wing-mobile@2x.webp 2x">
-                <source media="(min-width:1200px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
+                <source media="(min-width:960px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
                 <source media="(min-width:660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x">
                 <img class="users-posts__image" src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" width="280" height="180" alt="Крыло летящего самолета на фоне заката">
               </picture>
@@ -250,7 +281,12 @@
                 <p class="users-posts__time">(45 часов назад)</p>
               </div>
               <p class="users-posts__description">Всем GM и взаимные лайки!</p>
-              <p class="users-posts__like">Нравится: 2560</p>
+              <div class="users-posts__like">
+                <button class="users-posts__heart">
+                  <svg class="users-posts__heart-image" width="48" height="48"><use xlink:href="#icon-heart"></use></svg>
+                </button>
+                <p class="users-posts__count">Нравится: 2560</p>
+              </div>
             </div>
           </div>
         </li>
@@ -263,10 +299,10 @@
           <h2 class="visually-hidden">Загрузить фотографию</h2>
           <div class="user-upload__photo">
             <picture>
-              <source type="image/webp" media="(min-width:1200px)" srcset="img/photo-road-desktop@1x.webp 1x, img/photo-road-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width:960px)" srcset="img/photo-road-desktop@1x.webp 1x, img/photo-road-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width:660px)" srcset="img/photo-road-tablet@1x.webp 1x, img/photo-road-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/photo-road-mobile@1x.webp 1x, img/photo-road-mobile@2x.webp 2x">
-              <source media="(min-width:1200px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
+              <source media="(min-width:960px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
               <source media="(min-width:660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x">
               <img class="user-upload__image" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" width="280" height="374" alt="загружаемое фото">
             </picture>
