--- a/source/photo.html
+++ b/source/photo.html
@@ -87,6 +87,9 @@
       </div>
       <div class="users-posts">
         <div class="users-posts__item users-posts__item--pano">
+          <div class="users-posts__title-pano">
+            <p class="users-posts__title">Панорама дня</p>
+          </div>
           <div class="users-posts__photo users-posts__photo--pano">
             <a href="#">
               <picture>
@@ -100,7 +103,6 @@
             </a>
           </div>
           <div class="users-posts__article users-posts__article--pano">
-            <p class="users-posts__title">Панорама дня</p>
             <div class="container container--pano">
               <div class="users-posts__head">
                 <p class="users-posts__author">Анна</p>
