--- a/source/index.html
+++ b/source/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="features">
-          <div class="container">
+          <div class="container container--features">
             <ul class="features__list">
               <li class="features__item">
                 <h3 class="features__title">Поднимает настроение</h3>
